# thesis-cas-pipeline-benchmarking

./: .gitattributes  .gitignore  README.md  download_genomes.R  genome.fna  install_deps.sh  main.py  process_profiler.py  pyproject.toml
data_acquisition/: README_groundtruth.txt  download_genomes.R  download_genomes.py
profiles/: 2OG_0_CAS-I-II-III-IV-V-VI.hmm  2OG_1_CAS-I-II-III-IV-V-VI.hmm  AbiEii_0_CAS-III.hmm  AbiEii_1_CAS-III-A.hmm  AbiEii_2_CAS-III-C.hmm  Can2_Card1_17_CAS-III.hmm  Cas10-like_0_IVC.hmm  Cas10_0_CAS-III-A.hmm  Cas10_0_CAS-III-B.hmm  Cas10_0_CAS-III-C.hmm  Cas10_0_CAS-III.hmm  Cas10_1_CAS-III-B.hmm  Cas10_1_CAS-III.hmm  Cas10_2_CAS-III.hmm  Cas10_3_CAS-III.hmm  Cas10_4_CAS-III.hmm  Cas10_5_CAS-III.hmm  Cas10_6_CAS-III.hmm  Cas10_7_CAS-III.hmm  Cas10d_0_CAS-I-D.hmm  Cas10d_1_CAS-I-D.hmm  Cas10d_2_CAS-I-D.hmm  Cas10d_3_CAS-I-D.hmm  Cas10d_4_CAS-I-D.hmm  Cas10d_5_CAS-I-D.hmm  Cas10d_6_CAS-I-D.hmm  Cas10d_7_CAS-I-D.hmm  Cas10d_8_CAS-I-D.hmm  Cas11_0_CAS-III-D.hmm  Cas11_0_IV.hmm  Cas11_1_IV.hmm  Cas11_2_IV.hmm  Cas11_3_IV.hmm  Cas11b_0_CAS-I-B.hmm  Cas11b_1_CAS-I-B.hmm  Cas11b_2_CAS-I-B.hmm  Cas11d2_0_CAS-I-D.hmm  Cas11d_0_CAS-I-D.hmm  Cas12a_0_CAS-V-A.hmm  Cas12a_1_CAS-V-A.hmm  (+548 more)
profiles/alignments/: C19_Cas3.FASTA  C19_Cas5f_1.FASTA  C19_Cas8b13.FASTA  C19_Cas8f_1.FASTA  C19_Csa5gr11.FASTA  C19_Csa5gr11a.FASTA  C19_Csa5gr11c.FASTA  C19_Csa8a2.FASTA  C19_LS.FASTA  C19_SS.FASTA  C19_SS_III_F_1.FASTA  C19_SS_III_F_2.FASTA  C19_cas10d_1.FASTA  C19_cas10d_2.FASTA  C19_cas11b.FASTA  C19_cas11d2.FASTA  C19_cas13gr13.FASTA  (+549 more)
py/: constants.py  main.py
(+581 files in other folders)
